Updated changelog so generated deb is signed by Akiban build user.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,5 +2,5 @@ akiban-server (0.0.2) lucid; urgency=low
 
   * Development release.
 
- -- Padraig O'Sullivan <osullivan.padraig@gmail.com>  Mon, 27 Dec 2010 17:36:31 -0600
+ -- Akiban Build User <build@akiban.com>  Mon, 27 Dec 2010 17:36:31 -0600
 
