--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+akiban-server (0.0.3) lucid; urgency=low
+
+  * Development release.
+
+ -- Akiban Build User <build@akiban.com>  Fri, 18 Mar 2011 17:01:31 -0600
+
 akiban-server (0.0.2) lucid; urgency=low
 
   * Development release.
