--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+akiban-studio (0.0.4) lucid; urgency=low
+    
+  * Development Release.
+
+ -- Akiban Build User <build@akiban.com> Fri Mar 25 10:52:03 2011
+    
 akiban-server (0.0.3) lucid; urgency=low
 
   * Development release.
