--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,7 @@ akiban-server (0.1.0) lucid; urgency=low
 
   * Development Release.
 
- -- Akiban Build User <<build@akiban.com>>  Wed, 30 Mar 2011 10:28:31 -0400
+ -- Akiban Build User <build@akiban.com>  Wed, 30 Mar 2011 10:28:31 -0400
 
 akiban-server (0.0.4) lucid; urgency=low
 
