--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+akiban-server (0.1.1) lucid; urgency=low
+
+  * Development Release.
+
+ -- Akiban Build User <build@akiban.com>  Thu, 31 Mar 2011 11:37:59 -0400
+
 akiban-server (0.1.0) lucid; urgency=low
 
   * Development Release.
