--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+akiban-server (0.4.1) lucid; urgency=low
+
+  * Development Release.
+
+ -- Akiban Build User <build@akiban.com>  Mon, 09 May 2011 13:04:49 -0400
+
 akiban-server (0.3.0) lucid; urgency=low
 
   * Development Release.
