--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+akiban-server (0.5.0) lucid; urgency=low
+
+  * Development Release.
+
+ -- Akiban Build User <build@akiban.com>  Thu, 30 Jun 2011 14:52:16 -0400
+
 akiban-server (0.4.2) lucid; urgency=low
 
   * Development Release.
