--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+akiban-server (0.6.0) natty; urgency=low
+
+  * Development Release.
+
+ -- Akiban Build User <build@akiban.com>  Wed, 10 Aug 2011 19:10:30 -0400
+
 akiban-server (0.5.1) lucid; urgency=low
 
   * Development Release.
